# erp-gcal

./: .gitignore  Pipfile  README.md  app.py  client_secret.json  cms.py  dates.py  erp.py  events.py  gcal.py  main.py  parse_excel.py  pyproject.toml  sample_config.ini  sample_config.toml  timetable.json  timetable.py  tt.xlsx  utils.py
